--- a/about.html
+++ b/about.html
@@ -53,10 +53,6 @@ https://templatemo.com/tm-532-next-level
                     <div class="tm-nav-link-highlight"></div>
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
                 </ul>
               </div>
             </nav>
@@ -69,7 +65,8 @@ https://templatemo.com/tm-532-next-level
           <div class="tm-page-col-left tm-welcome-box tm-bg-gradient">
             <p class="tm-welcome-text">
               <em
-                >"This is our staff team."</em
+                >DIRECTOR - Jay Klair<br><br>
+				ASSISTANT DIRECTOR - Faran Syed</em
               >
             </p>
           </div>
@@ -77,7 +74,7 @@ https://templatemo.com/tm-532-next-level
             <div
               class="tm-welcome-parallax"
               data-parallax="scroll"
-              data-image-src="img/pink-contem-girl.jpg"
+              data-image-src="img/three.jpeg"
             ></div>
           </div>
         </div>
@@ -134,55 +131,6 @@ made. Learning stories are used as a reflection to document their competencies a
 to learn within the healthy and positive play environments.
                   </p>
                 </div>
-                <div class="row tm-pt-5">
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/bitcoin-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">
-                        Farhan Syed
-                      </h4>
-                      <p class="tm-mb-2">Director</p>
-
-                      <p>
-                        Something about Farhan
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/ar-guy.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">Someone else</h4>
-                      <p class="tm-mb-2">Assistant Director</p>
-                      <p>
-                        Something about this person
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/desk-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">Another person</h4>
-                      <p class="tm-mb-2">Educator</p>
-                      <p>
-                        Something about this person
-                      </p>
-                    </div>
-                  </div>
-                </div>
               </div>
               <div id="tab2">
                 <div class="text-content">
@@ -207,110 +155,7 @@ through play and educators play a pivotal role in providing these positive play 
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
                   </p>
                 </div>
-                <div class="row tm-pt-5">
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/bitcoin-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">
-                        Farhan Syed
-                      </h4>
-                      <p class="tm-mb-2">Director</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                      </div>
-
-                      <p>
-                        Mauris efficitur risus mi, et varius dolor sodales
-                        facilisis. Fusce sed mi tristique.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/ar-guy.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">New Hudson</h4>
-                      <p class="tm-mb-2">Digital Marketing</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://twitter.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-twitter tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://linkedin.com"
-                          class="tm-about-social-link"
-                        >
-                          <i
-                            class="fab fa-linkedin-in tm-about-social-icon"
-                          ></i>
-                        </a>
-                      </div>
-                      <p>
-                        Pellentesque habitant morbi tristique senectus et netus
-                        et malesuada fames.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/desk-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">Jennifer Wall</h4>
-                      <p class="tm-mb-2">Team Leader</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://twitter.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-twitter tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://linkedin.com"
-                          class="tm-about-social-link"
-                        >
-                          <i
-                            class="fab fa-linkedin-in tm-about-social-icon"
-                          ></i>
-                        </a>
-                      </div>
-                      <p>
-                        Three social icons are placed in above circles. Sed
-                        turpis nisl, congue a arcu in.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                
               </div>
               <div id="tab3">
                 <div class="text-content">
@@ -375,117 +220,28 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
             </p>
                   </p>
                 </div>
-                <div class="row tm-pt-5">
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/bitcoin-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">
-                        Farhan Syed
-                      </h4>
-                      <p class="tm-mb-2">Director</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                      </div>
-
-                      <p>
-                        Mauris efficitur risus mi, et varius dolor sodales
-                        facilisis. Fusce sed mi tristique.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/ar-guy.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">New Hudson</h4>
-                      <p class="tm-mb-2">Digital Marketing</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://twitter.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-twitter tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://linkedin.com"
-                          class="tm-about-social-link"
-                        >
-                          <i
-                            class="fab fa-linkedin-in tm-about-social-icon"
-                          ></i>
-                        </a>
-                      </div>
-                      <p>
-                        Pellentesque habitant morbi tristique senectus et netus
-                        et malesuada fames.
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="col-md-4 text-center">
-                    <div class="tm-about-person mx-auto">
-                      <img
-                        src="img/desk-girl.jpg"
-                        alt="Image"
-                        class="img-fluid tm-mb-1"
-                      />
-                      <h4 class="tm-text-secondary tm-mb-1">Jennifer Wall</h4>
-                      <p class="tm-mb-2">Team Leader</p>
-                      <div class="tm-mb-3">
-                        <a
-                          href="https://facebook.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-facebook-f tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://twitter.com"
-                          class="tm-about-social-link"
-                        >
-                          <i class="fab fa-twitter tm-about-social-icon"></i>
-                        </a>
-                        <a
-                          href="https://linkedin.com"
-                          class="tm-about-social-link"
-                        >
-                          <i
-                            class="fab fa-linkedin-in tm-about-social-icon"
-                          ></i>
-                        </a>
-                      </div>
-                      <p>
-                        Three social icons are placed in above circles. Sed
-                        turpis nisl, congue a arcu in.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                
+          </div>
+        </div>
+      </section>
+      <!-- Page footer -->
+	  <section class="row" id="tmCallToAction" style="background-color:greenyellow">
+        <div class="col-12 tm-page-cols-container tm-call-to-action-col">
+          <div class="tm-page-col-right">
+            <div class="tm-call-to-action-box" style="background-color:white">
+              <div class="tm-call-to-action-text">
+                <h3 class="tm-call-to-action-title">
+                  Contact
+                </h3>
+                <p class="tm-call-to-action-description">
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701
+                </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-
-      <!-- Page footer -->
       <footer class="row tm-page-footer">
         <p class="col-12 tm-copyright-text mb-0">
 		<a href="https://linkedin.com/in/architsoni">Click here to contact for a website</a><br>
