--- a/index.html
+++ b/index.html
@@ -53,10 +53,6 @@ https://templatemo.com/tm-532-next-level
                     <div class="tm-nav-link-highlight"></div>
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
                 </ul>
               </div>
             </nav>
@@ -149,7 +145,7 @@ Friday.</em>
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 5051 50 St, T4V1R3, Camrose, AB, Canada.<br>
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
 				Phone - +1 (780) 678-0701
                 </p>
               </div>
