--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Next Level - Gallery</title>
+    <title>Camrose Little Angels Daycare - Gallery</title>
 <!--
 Next Level CSS Template
 https://templatemo.com/tm-532-next-level
@@ -20,7 +20,7 @@ https://templatemo.com/tm-532-next-level
         <div class="col-lg-4 col-10">
           <div class="tm-brand-container">
             <div class="tm-brand-texts">
-              <h1 class="text-uppercase tm-brand-name">Next Level</h1>
+              <h1 class="text-uppercase tm-brand-name">Camrose Little Angels</h1>
             </div>
           </div>
         </div>
@@ -53,10 +53,6 @@ https://templatemo.com/tm-532-next-level
                       Gallery <span class="sr-only">(current)</span>
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
                 </ul>
               </div>
             </nav>
@@ -73,211 +69,115 @@ https://templatemo.com/tm-532-next-level
           >
             <div class="tm-bg-black-transparent tm-parallax-overlay">
               <h2>Our Gallery</h2>
-              <p>this is a parallax background image</p>
+              <p>Pictures of daycare</p>
             </div>
           </div>
         </div>
       </div>
 
       <section class="row tm-pt-4">
-        <div class="col-12 tm-page-cols-container">
-          <div class="tm-page-col-left">
-            <ul class="tabs clearfix filters-button-group">
-              <li>
-                <a href="#" class="active" data-filter="*">
-                  <div class="tm-tab-icon"></div>
-                  All Types
-                </a>
-              </li>
-              <li>
-                <a href="#" class="" data-filter=".category-1">
-                  <div class="tm-tab-icon"></div>
-                  First Category
-                </a>
-              </li>
-              <li>
-                <a href="#" class="" data-filter=".category-2">
-                  <div class="tm-tab-icon"></div>
-                  Second Type
-                </a>
-              </li>
-              <li>
-                <a href="#" class="" data-filter=".category-3">
-                  <div class="tm-tab-icon"></div>
-                  Third Category
-                </a>
-              </li>
-            </ul>
-          </div>
           <div class="tm-page-col-right">
             <div class="tm-gallery" id="tmGallery">
               <div class="tm-gallery-item category-1">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-01.jpg"
+                    src="img/gallery/one.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-2">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-02.jpg"
+                    src="img/gallery/two.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-1">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-03.jpg"
+                    src="img/gallery/three.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-3">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-04.jpg"
+                    src="img/gallery/four.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-2">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-05.jpg"
+                    src="img/gallery/five.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-3">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-06.jpg"
+                    src="img/gallery/six.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-3">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-07.jpg"
+                    src="img/gallery/seven.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
               <div class="tm-gallery-item category-1">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-08.jpg"
+                    src="img/gallery/eight.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
+
                 </figure>
               </div>
               <div class="tm-gallery-item category-2">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/gallery-item-09.jpg"
+                    src="img/gallery/nine.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
                 </figure>
               </div>
-              <div class="tm-gallery-item category-3">
-                <figure class="effect-bubba">
-                  <img
-                    src="img/gallery/gallery-item-10.jpg"
-                    alt="Gallery item"
-                    class="img-fluid"
-                  />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="tm-gallery-item category-2">
-                <figure class="effect-bubba">
-                  <img
-                    src="img/gallery/gallery-item-11.jpg"
-                    alt="Gallery item"
-                    class="img-fluid"
-                  />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="tm-gallery-item category-1">
-                <figure class="effect-bubba">
-                  <img
-                    src="img/gallery/gallery-item-12.jpg"
-                    alt="Gallery item"
-                    class="img-fluid"
-                  />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="#">View more</a>
-                  </figcaption>
-                </figure>
+            </div>
+          </div>
+        </div>
+      </section>
+	  <section class="row" id="tmCallToAction" style="background-color:greenyellow">
+        <div class="col-12 tm-page-cols-container tm-call-to-action-col">
+          <div class="tm-page-col-right">
+            <div class="tm-call-to-action-box" style="background-color:white">
+              <div class="tm-call-to-action-text">
+                <h3 class="tm-call-to-action-title">
+                  Contact
+                </h3>
+                <p class="tm-call-to-action-description">
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701
+                </p>
               </div>
             </div>
           </div>
