--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
       <!-- Page footer -->
       <footer class="row tm-page-footer">
         <p class="col-12 tm-copyright-text mb-0">
-		<a href="https://linkedin.com/in/architsoni">Click here to contact for a website</a><br>
+		<a href="https://linkedin.com/in/architsoni">Click here to contact for a personal/professional website</a><br>
           Designed by
           <a href="https://fb.com/templatemo" rel="nofollow" class="tm-copyright-link">Template Mo</a>
         </p>
