--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Friday.</em>
       <!-- Page footer -->
       <footer class="row tm-page-footer">
         <p class="col-12 tm-copyright-text mb-0">
-		<a href="https://linkedin.com/in/architsoni">Click here to contact for a website</a><br>
+		<a href="https://linkedin.com/in/architsoni">Click here to contact for a personal/professional website</a><br>
           Designed by
           <a href="https://fb.com/templatemo" rel="nofollow" class="tm-copyright-link">Template Mo</a>
         </p>
