--- a/about.html
+++ b/about.html
@@ -224,6 +224,23 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
           </div>
         </div>
       </section>
+	  <section class="row" id="tmCallToAction" style="background-color:greenyellow">
+        <div class="col-12 tm-page-cols-container tm-call-to-action-col">
+          <div class="tm-page-col-right">
+            <div class="tm-call-to-action-box" style="background-color:white">
+              <div class="tm-call-to-action-text">
+                <h3 class="tm-call-to-action-title">
+                  Contact
+                </h3>
+                <p class="tm-call-to-action-description">
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Page footer -->
       <footer class="row tm-page-footer">
         <p class="col-12 tm-copyright-text mb-0">
