--- a/about.html
+++ b/about.html
@@ -224,6 +224,7 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
           </div>
         </div>
       </section>
+	  <img src="img/regr.jpg" style="max-width:100%"/>
 	  <section class="row" id="tmCallToAction" style="background-color:greenyellow">
         <div class="col-12 tm-page-cols-container tm-call-to-action-col">
           <div class="tm-page-col-right">
@@ -233,8 +234,9 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Phone - +1 (780) 678-0701
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701<br>
+				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
               </div>
             </div>
