--- a/gallery.html
+++ b/gallery.html
@@ -166,6 +166,7 @@ https://templatemo.com/tm-532-next-level
           </div>
         </div>
       </section>
+	  	  <img src="img/regr.jpg" style="max-width:100%"/>
 	  <section class="row" id="tmCallToAction" style="background-color:greenyellow">
         <div class="col-12 tm-page-cols-container tm-call-to-action-col">
           <div class="tm-page-col-right">
@@ -175,8 +176,9 @@ https://templatemo.com/tm-532-next-level
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Phone - +1 (780) 678-0701
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701<br>
+				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
               </div>
             </div>
