--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ https://templatemo.com/tm-532-next-level
         <div class="col-12 tm-page-cols-container">
           <div class="tm-page-col-left tm-welcome-box tm-bg-primary">
             <p class="tm-welcome-text">
-              <em>"It is every child's right to have an open, engaging, and responsive
-environment where they explore the world through play."</em>
+              <em>Hours of Operation: Regular hours of operation are from 7:00 a.m. to 5.45 p.m. Monday to
+Friday.</em>
             </p>
           </div>
           <div class="tm-page-col-right">
@@ -104,39 +104,43 @@ a sense of belonging where children feel nurtured and supported.
 is the work of children. Camrose Little Angels believes that children experience the world
 through play and educators play a pivotal role in providing these positive play experiences, and
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
+<br>
+<br>
+<span style="background-color:red; color:white; padding:20px"><a href="handbook.htm" target="_blank" style="color:white">CLICK HERE TO SEE PARENT HANDBOOK</a></span>
+<span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="reg.docx" download style="color:white">CLICK HERE TO DOWNLOAD REGISTRATION FORM</a></span>
             </p>
           </div>
         </div>
       </section>
-<div class="row tm-welcome-row">
-        <div class="col-12 tm-page-cols-container">
-          <div class="tm-page-col-left tm-welcome-box tm-bg-primary">
-            <p class="tm-welcome-text">
-              <em>Hours of Operation: Regular hours of operation are from 7:00 a.m. to 5.45 p.m. Monday to
-Friday.</em>
-            </p>
-          </div>
-          <div class="tm-page-col-right">
-            <div
-              class="tm-welcome-parallax"
-              data-parallax="scroll"
-              data-image-src="img/blue-contem-girl-2.jpg"
-            ></div>
-          </div>
-        </div>
-      </div>
 	  <section class="row tm-pt-4 tm-pb-6">
         <div class="col-12 tm-page-cols-container">
+		<div class="tm-page-col-left tm-welcome-box tm-bg-primary" style="background-color:white; margin-top:-300px">
+               <img src="img/reg.jpg" style="max-width:100%;"/>
+          </div>
           <div class="tm-page-col-right">
-            
-            </div>
+		  <p style="margin-top:-50px">Check out our <a href="gallery.html">Gallery</a> for images of Daycare <br>
+		  Check out our <a href="about.html">About page</a> for more information.</p>
+			<p style="text-align:center; background-color:pink; "><u>Fee Structure</u>
+			  <br>
+			  Out of School care = $650/month or $50/day
+			  <br>
+			  Child age 3-5 years = $850/month or $55/day
+			  <br>
+			  Child age 2-3 years = $950/month or $60/day</p>
           </div>
         </div>
-      </div>
+		 <div class="tm-page-col-right">
+		 Please print and bring along a filled copy of the Registration Form, or email us a filled copy at faran@ualberta.ca
+		 
+		 <div>
+      </section>
+	  
+	  
+	  
       <!-- row -->
 
       <!-- Call to Action -->
-      <section class="row" id="tmCallToAction" style="background-color:greenyellow">
+      <section class="row" id="tmCallToAction" style="background-color:greenyellow; ">
         <div class="col-12 tm-page-cols-container tm-call-to-action-col">
           <div class="tm-page-col-right">
             <div class="tm-call-to-action-box" style="background-color:white">
@@ -145,8 +149,9 @@ Friday.</em>
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Phone - +1 (780) 678-0701
+				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Phone - +1 (780) 678-0701<br>
+				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
               </div>
             </div>
