--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ through play and educators play a pivotal role in providing these positive play 
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
 <br>
 <br>
-<span style="background-color:red; color:white; padding:20px"><a href="handbook.pdf" target="_blank" style="color:white">CLICK HERE TO SEE PARENT HANDBOOK</a></span>
-<span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="reg.docx" download style="color:white">CLICK HERE TO DOWNLOAD REGISTRATION FORM</a></span>
+<span style="background-color:red; color:white; padding:20px"><a href="handbook.pdf" target="_blank" style="color:white">SEE PARENT HANDBOOK HERE</a></span>
+<span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="reg.docx" download style="color:white">DOWNLOAD REGISTRATION FORM HERE</a></span>
             </p>
           </div>
         </div>
