--- a/index.html
+++ b/index.html
@@ -13,6 +13,77 @@ https://templatemo.com/tm-532-next-level
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
+	<style>
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active2 {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} s
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+</style>
   </head>
   <body>
     <div class="container-fluid">
@@ -20,7 +91,7 @@ https://templatemo.com/tm-532-next-level
         <div class="col-lg-4 col-10">
           <div class="tm-brand-container">
             <div class="tm-brand-texts">
-              <h1 class="text-uppercase tm-brand-name">Camrose Little Angels</h1>
+              <h2 class="text-uppercase tm-brand-name">Camrose Little Angels</h2>
             </div>
           </div>
         </div>
@@ -69,11 +140,45 @@ Friday.</em>
             </p>
           </div>
           <div class="tm-page-col-right">
-            <div
-              class="tm-welcome-parallax"
-              data-parallax="scroll"
-              data-image-src="img/blue-contem-girl.jpg"
-            ></div>
+		    <div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/2.jpeg" style="max-width:100%">
+  <div class="text"></div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/3.jpeg" style="max-width:100%">
+  <div class="text"></div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/1.jpeg" style="max-width:100%">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/4.jpeg" style="max-width:100%">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/5.jpeg" style="max-width:100">
+  <div class="text"></div>
+</div>
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+ <span class="dot"></span>
+ <span class="dot"></span> 
+</div>
           </div>
         </div>
       </div>
@@ -92,7 +197,7 @@ Friday.</em>
 whose learning, growth and development are profoundly influenced by the quality care and
 relationships they receive. It is every child's right to have an open, engaging, and responsive
 environment where they explore the world through play.<br><br>
-Camrose Little Angels Daycare provides children’s experience in a safe and nurturing
+Camrose Little Angels Daycare provides children's experience in a safe and nurturing
 environment where their social, emotional, physical and cognitive development is supported.
 These environments are intended to promote positive self-identity and a sense of belonging.
 Children will have open and flexible environments where playful exploration, problem solving,
@@ -100,7 +205,7 @@ and creativity are encouraged and purposely planned by the educators. Environmen
 a sense of belonging where children feel nurtured and supported.
             </p>
             <p class="mb-0">
-           	  Play is integral to children’s learning and richly formative in their capacity for relationship. Play
+           	  Play is integral to children's learning and richly formative in their capacity for relationship. Play
 is the work of children. Camrose Little Angels believes that children experience the world
 through play and educators play a pivotal role in providing these positive play experiences, and
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
@@ -115,24 +220,49 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
 	  <section class="row tm-pt-4 tm-pb-6">
         <div class="col-12 tm-page-cols-container">
 		<div class="tm-page-col-left tm-welcome-box tm-bg-primary" style="background-color:white; margin-top:-300px">
-               <img src="img/reg.jpg" style="max-width:100%;"/>
+               <img src="img/reg.jpeg" style="max-width:100%;"/>
           </div>
           <div class="tm-page-col-right">
-		  <p style="margin-top:-50px">Check out our <a href="gallery.html">Gallery</a> for images of Daycare <br>
+			<p style="text-align:center; background-color:pink; "><u>Fee Structure</u></p>
+			  <br>
+			  <table style="width:100%">
+  <tr>
+    <th>Child Age</th>
+    <th>Fee per Month</th>
+    <th>Fee per Day</th>
+	<th>Fee per Hour</th>
+  </tr>
+  <tr>
+    <td>19 Months - 2 Years</td>
+    <td>$999</td>
+    <td>$60</td>
+	<td>$9.99</td>
+  </tr>
+   <tr>
+    <td>2-3 Years</td>
+    <td>$950</td>
+    <td>$60</td>
+	<td>$8.99</td>
+  </tr>
+   <tr>
+    <td>4-5 Years</td>
+    <td>$850</td>
+    <td>$55</td>
+	<td>$7.99</td>
+  </tr>
+   <tr>
+    <td>6-12 Years</td>
+    <td>$650</td>
+    <td>$50</td>
+	<td>$6.99</td>
+  </tr>
+</table>
+<p style="text-align:center; background-color:pink; "><b>Subsidy available for eligible parents. <b></p><br>
+	  <p style="margin-top:-50px">Check out our <a href="gallery.html">Gallery</a> for images of Daycare <br>
 		  Check out our <a href="about.html">About page</a> for more information.</p>
-			<p style="text-align:center; background-color:pink; "><u>Fee Structure</u>
-			  <br>
-			  Out of School care = $650/month or $50/day
-			  <br>
-			  Child age 3-5 years = $850/month or $55/day
-			  <br>
-			  Child age 2-3 years = $950/month or $60/day</p>
+			 
           </div>
         </div>
-		 <div class="tm-page-col-right">
-		 Please print and bring along a filled copy of the Registration Form, or email us a filled copy at faran@ualberta.ca
-		 
-		 <div>
       </section>
 	  
 	  
@@ -150,7 +280,8 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
                 </h3>
                 <p class="tm-call-to-action-description">
 				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Phone - +1 (780) 678-0701<br>
+				Phone - (587) 568-7206 <span style="color:red">(Jay Klair)</span><br>
+				Phone - (780) 678-0701 <span style="color:red">(Faran Syed)</span><br>
 				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
               </div>
@@ -167,6 +298,28 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
         </p>
       </footer>
     </div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active2", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active2";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
