--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ img {vertical-align: middle;}
         <div class="col-12 tm-page-cols-container">
           <div class="tm-page-col-left tm-welcome-box tm-bg-primary">
             <p class="tm-welcome-text">
-              <em>Hours of Operation: Regular hours of operation are from 7:00 a.m. to 5.45 p.m. Monday to
+              <em><b>Hours of Operation</b>: Regular hours of operation are from <br> 6:30 a.m. to 6:00 p.m. <br>Monday to
 Friday.</em>
             </p>
           </div>
@@ -144,29 +144,64 @@ Friday.</em>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="img/gallery/2.jpeg" style="max-width:100%">
+  <img src="img/gallery/2.jpeg" style="width:100%; max-width:600px">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="img/gallery/3.jpeg" style="max-width:100%">
+  <img src="img/gallery/3.jpeg" style="width:100%; max-width:600px">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="img/gallery/1.jpeg" style="max-width:100%">
+  <img src="img/gallery/1.jpeg" style="width:100%; max-width:400px">
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="img/gallery/4.jpeg" style="max-width:100%">
+  <img src="img/gallery/4.jpeg" style="width:100%; max-width:400px">
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="img/gallery/5.jpeg" style="max-width:100">
+  <img src="img/gallery/5.jpeg" style="width:100%; max-width:400px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/6.jpeg" style="width:100%; max-width:600px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/7.jpeg" style="width:100%; max-width:300px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/8.jpeg" style="width:100%; max-width:400px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/9.jpeg" style="width:100%; max-width:400px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/10.jpeg" style="width:100%; max-width:400px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/11.jpeg" style="width:100%; max-width:400px">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="img/gallery/12.jpeg" style="width:100%; max-width:400px">
   <div class="text"></div>
 </div>
 </div>
@@ -178,6 +213,14 @@ Friday.</em>
   <span class="dot"></span>
  <span class="dot"></span>
  <span class="dot"></span> 
+ <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+ <span class="dot"></span>
+ <span class="dot"></span> 
+ <span class="dot"></span>
+ <span class="dot"></span> 
+
 </div>
           </div>
         </div>
