--- a/gallery.html
+++ b/gallery.html
@@ -143,10 +143,37 @@ https://templatemo.com/tm-532-next-level
                   />
                 </figure>
               </div>
+			  <div class="tm-gallery-item category-3">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/ten.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+			  <div class="tm-gallery-item category-3">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/eleven.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+			  <div class="tm-gallery-item category-3">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/twelve.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
               <div class="tm-gallery-item category-1">
                 <figure class="effect-bubba">
                   <img
-                    src="img/gallery/eight.jpeg"
+                    src="img/gallery/thirteen.jpeg"
                     alt="Gallery item"
                     class="img-fluid"
                   />
