--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ https://templatemo.com/tm-532-next-level
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
 	<style>
+	table, th, td {
+  border: 1px solid black;
+}
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
@@ -262,44 +265,40 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
       </section>
 	  <section class="row tm-pt-4 tm-pb-6">
         <div class="col-12 tm-page-cols-container">
-		<div class="tm-page-col-left tm-welcome-box tm-bg-primary" style="background-color:white; margin-top:-300px">
-               <img src="img/reg.jpeg" style="max-width:100%;"/>
+		<div class="tm-page-col-left tm-welcome-box tm-bg-primary" style="background-color:white; margin-top:-300px"> 
           </div>
           <div class="tm-page-col-right">
 			<p style="text-align:center; background-color:pink; "><u>Fee Structure</u></p>
 			  <br>
 			  <table style="width:100%">
+  <table><thead>
+    <th bgcolor="lightgreen">Child Age</th>
+    <th bgcolor="yellow">Fee per Month (17 days or more)</th>
+    <th bgcolor="yellow">Fee per Day (up to 9 hrs 30 mins)</th>
+	<th bgcolor="yellow">Fee per Hour (minimum 3 hours)</th>
+  </thead>
+  <tbody>
   <tr>
-    <th>Child Age</th>
-    <th>Fee per Month</th>
-    <th>Fee per Day</th>
-	<th>Fee per Hour</th>
-  </tr>
-  <tr>
-    <td>19 Months - 2 Years</td>
-    <td>$999</td>
-    <td>$60</td>
-	<td>$9.99</td>
+    <td bgcolor="lightgreen">6 Months - 3 Years</td>
+    <td bgcolor="yellow">$899</td>
+    <td bgcolor="yellow">$60</td>
+	<td bgcolor="yellow">$8.99</td>
   </tr>
    <tr>
-    <td>2-3 Years</td>
-    <td>$950</td>
-    <td>$60</td>
-	<td>$8.99</td>
+    <td bgcolor="lightgreen">4-5 Years</td>
+    <td bgcolor="yellow">$850</td>
+    <td bgcolor="yellow">$55</td>
+	<td bgcolor="yellow">$7.99</td>
   </tr>
    <tr>
-    <td>4-5 Years</td>
-    <td>$850</td>
-    <td>$55</td>
-	<td>$7.99</td>
+    <td bgcolor="lightgreen">6-12 Years</td>
+    <td bgcolor="yellow">$650</td>
+    <td bgcolor="yellow">$50</td>
+	<td bgcolor="yellow">$6.99</td>
   </tr>
-   <tr>
-    <td>6-12 Years</td>
-    <td>$650</td>
-    <td>$50</td>
-	<td>$6.99</td>
-  </tr>
+  </tbody>
 </table>
+
 <p style="text-align:center; background-color:pink; "><b>Subsidy available for eligible parents. <b></p><br>
 	  <p style="margin-top:-50px">Check out our <a href="gallery.html">Gallery</a> for images of Daycare <br>
 		  Check out our <a href="about.html">About page</a> for more information.</p>
