--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
   </tr>
   </tbody>
 </table>
+<br> Overtime Rate (more than 9 hrs 30 mins) = $10.00/hr<br><br>
 
-<p style="text-align:center; background-color:pink; "><b>Subsidy available for eligible parents. <b></p><br>
+<p style="text-align:center; background-color:pink; "><b>Subsidy available for eligible parents. <b></p><br><br>
 	  <p style="margin-top:-50px">Check out our <a href="gallery.html">Gallery</a> for images of Daycare <br>
 		  Check out our <a href="about.html">About page</a> for more information.</p>
 			 
