--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@ img {vertical-align: middle;}
 </style>
   </head>
   <body>
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v11.0" nonce="TE16BVqE"></script>
     <div class="container-fluid">
       <div class="row tm-brand-row">
         <div class="col-lg-4 col-10">
@@ -138,7 +140,7 @@ img {vertical-align: middle;}
         <div class="col-12 tm-page-cols-container">
           <div class="tm-page-col-left tm-welcome-box tm-bg-primary">
             <p class="tm-welcome-text">
-              <em><b>Hours of Operation</b>: Regular hours of operation are from <br> 6:30 a.m. to 6:00 p.m. <br>Monday to
+              <em><b>Hours of Operation</b>: Regular hours of operation are from <br> 6:00 a.m. to 6:30 p.m. <br>Monday to
 Friday.</em>
             </p>
           </div>
@@ -308,7 +310,18 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
         </div>
       </section>
 	  
-	  
+	  <section style="background-color:#add8ff; padding:20px">
+	  <h5 style="background-color:white; padding:12px; text-align:center">REVIEWS</h5><br><br>
+	  <div class="fb-post" style="margin:10px" data-href="https://e.facebook.com/lisa.k.markovich/posts/10157828604761364" data-width="700" data-show-text="true"><blockquote cite="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364" class="fb-xfbml-parse-ignore"><p>We could not be happier with the care Victoria receives at Little Angels Daycare.  The staff are friendly, educated,...</p>Posted by <a href="#" role="button">Lisa Kingston</a> on&nbsp;<a href="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364">Monday, 9 August 2021</a></blockquote></div>
+	  <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/nod.sawulabrown/posts/4413037648783127" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127" class="fb-xfbml-parse-ignore"><p>My son goes to Little Angels and he absolutely loves it. He get so excited to go everyday, and he even asks me to take him on the weekends. Great staff, friendly owners. I’m so happy we found them!</p>Posted by <a href="#" role="button">Nod Snowden</a> on&nbsp;<a href="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127">Saturday, 17 July 2021</a></blockquote></div>
+	  <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/jasper.jass.3/posts/4034689643318680" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/jasper.jass.3/posts/4034689643318680" class="fb-xfbml-parse-ignore"><p>Fully licensed daycare and After school care.
+Highly experienced and caring staff.
+Walking distance from schools.
+Subsidy available for eligible families.
+Definitely recommend!!!</p>Posted by <a href="#" role="button">Jay Singh</a> on&nbsp;<a href="https://www.facebook.com/jasper.jass.3/posts/4034689643318680">Saturday, 26 June 2021</a></blockquote></div>
+	 	 <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/harpreet.klairgarcha/posts/3066551163666928" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/harpreet.klairgarcha/posts/3066551163666928" class="fb-xfbml-parse-ignore"><p>Highly recommend my kids really enjoyed their all the teachers very genuine,loving,patient and very friendly thank you very much Mr jaskaran ❤️🤩🤩🤩</p>Posted by <a href="https://www.facebook.com/harpreet.klairgarcha">Harpreet Kaur</a> on&nbsp;<a href="https://www.facebook.com/harpreet.klairgarcha/posts/3066551163666928">Monday, 21 June 2021</a></blockquote></div>
+		 </section>
+	  <br><br>
 	  
       <!-- row -->
 
