--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
 <br>
 <br>
 <span style="background-color:red; color:white; padding:20px"><a href="handbook.pdf" target="_blank" style="color:white">SEE PARENT HANDBOOK</a></span>
-<span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="reg.docx" download style="color:white">DOWNLOAD REGISTRATION FORM</a></span>
+<span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="https://berlin.timesavr.net/prod/registration.php?cid=2261" style="color:white">REGISTRATION FORM</a></span>
             </p>
           </div>
         </div>
@@ -281,22 +281,22 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
   </thead>
   <tbody>
   <tr>
-    <td bgcolor="lightgreen">6 Months - 3 Years</td>
-    <td bgcolor="yellow">$899</td>
-    <td bgcolor="yellow">$60</td>
-	<td bgcolor="yellow">$8.99</td>
+    <td bgcolor="lightgreen">0-3 Years</td>
+    <td bgcolor="yellow">$925</td>
+    <td bgcolor="yellow">$62.50</td>
+	<td bgcolor="yellow">$9.25</td>
   </tr>
    <tr>
     <td bgcolor="lightgreen">4-5 Years</td>
-    <td bgcolor="yellow">$850</td>
-    <td bgcolor="yellow">$55</td>
-	<td bgcolor="yellow">$7.99</td>
+    <td bgcolor="yellow">$875</td>
+    <td bgcolor="yellow">$56.50</td>
+	<td bgcolor="yellow">$8.20</td>
   </tr>
    <tr>
-    <td bgcolor="lightgreen">6-12 Years</td>
-    <td bgcolor="yellow">$650</td>
-    <td bgcolor="yellow">$50</td>
-	<td bgcolor="yellow">$6.99</td>
+    <td bgcolor="lightgreen">6 Years and above</td>
+    <td bgcolor="yellow">$675</td>
+    <td bgcolor="yellow">$51.5</td>
+	<td bgcolor="yellow">$7.75</td>
   </tr>
   </tbody>
 </table>
@@ -335,8 +335,8 @@ Definitely recommend!!!</p>Posted by <a href="#" role="button">Jay Singh</a> on&
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Phone - (587) 568-7206 <span style="color:red">(Jay Klair)</span><br>
+				Address - 4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				Email - littleangels@camrosecare.ca <br>
 				Phone - (780) 678-0701 <span style="color:red">(Faran Syed)</span><br>
 				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
