--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ through play and educators play a pivotal role in providing these positive play 
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
 <br>
 <br>
-<span style="background-color:red; color:white; padding:20px"><a href="handbook.pdf" target="_blank" style="color:white">SEE PARENT HANDBOOK</a></span>
+<span style="background-color:red; color:white; padding:20px"><a href="handbook2.pdf" target="_blank" style="color:white">SEE PARENT HANDBOOK</a></span>
 <span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="https://berlin.timesavr.net/prod/registration.php?cid=2261" style="color:white">REGISTRATION FORM</a></span>
             </p>
           </div>
